<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".TelaPrincipal">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_header" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        app:srcCompat="@drawable/fotoPerfil" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="142dp"
        android:layout_height="56dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/iconeInicio" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView17"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:srcCompat="@drawable/icone2" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/icone3"
        tools:layout_editor_absoluteX="227dp" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView14"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        app:srcCompat="@drawable/icone4" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconeEngrenagem" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toEndOf="@+id/imageView19"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconeAlerta" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="370dp"
        android:layout_height="107dp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:srcCompat="@drawable/botaofundoVerde" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="367dp"
        android:layout_height="122dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView21"
        app:srcCompat="@drawable/fundoBranco" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:text="@string/Consumo"
        app:layout_constraintEnd_toEndOf="@+id/imageView21"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="@+id/imageView21"
        app:layout_constraintTop_toTopOf="@+id/imageView21" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/OPA"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView21"
        app:layout_constraintEnd_toEndOf="@+id/imageView21"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="@+id/imageView21" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/opa2"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        tools:layout_editor_absoluteY="259dp" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:backgroundTint="#000000"
        android:text="@string/vazio"
        app:layout_constraintEnd_toEndOf="@+id/imageView21"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/imageView21" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="casual"
        android:text="@string/ConsumoTotal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
        app:layout_constraintStart_toStartOf="@+id/imageView22"
        app:layout_constraintTop_toTopOf="@+id/imageView22"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/valor"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
        app:layout_constraintStart_toStartOf="@+id/imageView22"
        app:layout_constraintTop_toTopOf="@+id/imageView22"
        app:layout_constraintVertical_bias="0.71" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/opa2"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView22"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/imageView22" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="81dp"
        android:layout_height="34dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
        app:layout_constraintEnd_toEndOf="@+id/imageView22"
        app:layout_constraintTop_toTopOf="@+id/imageView22"
        app:layout_constraintVertical_bias="0.34"
        app:srcCompat="@drawable/borda" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginBottom="72dp"
        android:text="@string/Outubro"
        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
        app:layout_constraintEnd_toEndOf="@+id/imageView22"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>